manifest/checkoutservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: checkoutservice
  name: checkoutservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: checkoutservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: checkoutservice
    spec:
      containers:
        - env:
            - name: CART_SERVICE_ADDR
              value: cartservice:7070
            - name: CURRENCY_SERVICE_ADDR
              value: currencyservice:7000
            - name: EMAIL_SERVICE_ADDR
              value: emailservice:5000
            - name: PAYMENT_SERVICE_ADDR
              value: paymentservice:50052
            - name: PRODUCT_CATALOG_SERVICE_ADDR
              value: productcatalogservice:3550
            - name: SHIPPING_SERVICE_ADDR
              value: shippingservice:50051
          image: checkoutservice
          name: checkoutservice
          ports:
            - containerPort: 5050
              hostPort: 5050
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
