manifest/currencyservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: currencyservice
  name: currencyservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: currencyservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: currencyservice
    spec:
      imagePullSecrets:
      - name: toto
      containers:
        - env:
            - name: PORT
              value: "7000"
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_currencyservice
          name: currencyservice
          ports:
            - containerPort: 7000
              hostPort: 7000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
