manifest/emailservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: emailservice
  name: emailservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: emailservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: emailservice
    spec:
      containers:
        - env:
            - name: PORT
              value: "8080"
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_emailservice
          name: emailservice
          ports:
            - containerPort: 8080
              hostPort: 5000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
