manifest/loadgenerator-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: loadgenerator
  name: loadgenerator
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: loadgenerator
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: loadgenerator
    spec:
      containers:
        - env:
            - name: FRONTEND_ADDR
              value: frontend:80
          image: loadgenerator
          name: loadgenerator
          resources: {}
      restartPolicy: Always
status: {}
