manifest/paymentservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: paymentservice
  name: paymentservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: paymentservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: paymentservice
    spec:
      containers:
        - env:
            - name: PORT
              value: "50051"
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_paymentservice
          name: paymentservice
          ports:
            - containerPort: 50051
              hostPort: 50052
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
