manifest/productcatalogservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: productcatalogservice
  name: productcatalogservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: productcatalogservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: productcatalogservice
    spec:
      imagePullSecrets:
      - name: toto
      containers:
        - env:
            - name: PORT
              value: "3550"
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_productcatalogservice
          name: productcatalogservice
          ports:
            - containerPort: 3550
              hostPort: 3550
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
