manifest/recommendationservice-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: recommendationservice
  name: recommendationservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: recommendationservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: recommendationservice
    spec:
      imagePullSecrets:
      - name: toto
      containers:
        - env:
            - name: PORT
              value: "8080"
            - name: PRODUCT_CATALOG_SERVICE_ADDR
              value: productcatalogservice:3550
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_recommendationservice
          name: recommendationservice
          ports:
            - containerPort: 8080
              hostPort: 8080
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
