manifest/adservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: adservice
  name: adservice
spec:
  ports:
    - name: "9555"
      port: 9555
      targetPort: 9555
  selector:
    io.kompose.service: adservice
status:
  loadBalancer: {}
