manifest/adservice.yaml
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: adservice
#   labels:
#     app: adservice
# spec:
#   replicas: 1
#   selector:
#     matchLabels:
#       app: adservice
#   template:
#     metadata:
#       labels:
#         app: adservice
#     spec:
#       containers:
#       - name: adservice
#         image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_adservice
#         env:
#           - name: PORT
#             value: "9555"
#         ports:
#         - containerPort: 9555
---
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: adservice
  name: adservice
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: adservice
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/b2e1-gr2-ms-default: "true"
        io.kompose.service: adservice
    spec:
      containers:
        - env:
            - name: PORT
              value: "9555"
          image: b2e1gr2cr.azurecr.io/b2e1-gr2-ms_adservice
          name: adservice
          ports:
            - containerPort: 9555
              hostPort: 9555
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
---
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: adservice
  name: adservice
spec:
  ports:
    - name: "9555"
      port: 9555
      targetPort: 9555
  selector:
    io.kompose.service: adservice
status:
  loadBalancer: {}
