manifest/emailservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: emailservice
  name: emailservice
spec:
  ports:
    - name: "5000"
      port: 5000
      targetPort: 8080
  selector:
    io.kompose.service: emailservice
status:
  loadBalancer: {}
