manifest/frontend-service.yaml

apiVersion: v1
kind: Service
metadata:
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
    appgw.ingress.kubernetes.io/request-timeout: "20"
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: frontend
  name: frontend
spec:
  tls:
      - hosts:
          - b2e1-gr2-gateway.westeurope.cloudapp.azure.com
        secretName: letsencrypt
  rules:
    - host: b2e1-gr2-gateway.westeurope.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            path: "/"
            backend:
              service:
                name: frontend
  ports:
    - name: "80"
      port: 80
      targetPort: 8080
  selector:
    io.kompose.service: frontend
status:
  loadBalancer: {}
