manifest/paymentservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: paymentservice
  name: paymentservice
spec:
  ports:
    - name: "50052"
      port: 50052
      targetPort: 50051
  selector:
    io.kompose.service: paymentservice
status:
  loadBalancer: {}
