manifest/productcatalogservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: productcatalogservice
  name: productcatalogservice
spec:
  ports:
    - name: "3550"
      port: 3550
      targetPort: 3550
  selector:
    io.kompose.service: productcatalogservice
status:
  loadBalancer: {}
