manifest/shippingservice-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: shippingservice
  name: shippingservice
spec:
  ports:
    - name: "50051"
      port: 50051
      targetPort: 50051
  selector:
    io.kompose.service: shippingservice
status:
  loadBalancer: {}
