manifest/rancher.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rancher
  namespace: cattle-system
  annotations:
    kubernetes.io/ingress.class: azure/application-gateway
spec:
  rules:
    - host: rancher-b2e1-gr2.westeurope.cloudapp.azure.com
      http:
        paths:
          - pathType: Prefix
            path: "/rancher"
            backend:
              service:
                name: rancher
                port:
                  number: 80
